# capnp-rust-examples

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: 01_hello_alice.rs  02_vec_u8.rs  03_bytes.rs
schemas/: Makefile  README.md  person.capnp
src/: main.rs
