[package]
name = "capnp-rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schemas = { path = "./schemas/generated/rust" }
capnp = "0.18.1"
bytes = "1.5.0"

[build-dependencies]
capnpc = "0.18.0"
